--- a/Ejer6_AndroidRelations/Resources/layout/content_main.axml
+++ b/Ejer6_AndroidRelations/Resources/layout/content_main.axml
@@ -11,60 +11,83 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_centerHorizontal="true"
-        android:columnCount="4">
+        android:columnCount="4"
+        android:id="@+id/GridLayout1">
     <Button     
-         android:layout_width="50dp"
+        android:layout_width="50dp"
         android:layout_height="50dp"
-        android:text="1"/>
+        android:text="1"
+        android:id="@+id/b1"/>
     <Button
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:text="2"/>
+        android:text="2"
+        android:id="@+id/b2"/>
     <Button
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:text="3"/>
+        android:text="3"
+        android:id="@+id/b3"/>
     <Button
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:text="4"/>
+        android:text="4"
+        android:id="@+id/b4"/>
     <Button
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:text="5"/>
+        android:text="5"
+        android:id="@+id/b5"/>
     <Button
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:text="6"/>
+        android:text="6"
+        android:id="@+id/b6"/>
     <Button
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:text="7"/>
+        android:text="7"
+        android:id="@+id/b7"/>
     <Button
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:text="8"/>
+        android:text="8"
+        android:id="@+id/b8"/>
     <Button
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:text="9"/>
+        android:text="9"
+        android:id="@+id/b9"/>
     <Button
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:text="0"/>
+        android:text="0"
+        android:id="@+id/b10"/>
      <Button
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:text="+"/>
+        android:text="+"
+        android:id="@+id/b11"/>
      <Button
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:text="-"/>
+        android:text="-"
+        android:id="@+id/b12"/>
      <Button
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:text="="/>
+        android:text="="
+        android:id="@+id/b13"/>
+     <Button
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:text="()"
+        android:id="@+id/b14"/>
+     <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/introduceText"/>    
 
-    </GridLayout>
+  </GridLayout>
 
 </RelativeLayout>
