--- a/Ejer6_AndroidRelations/Resources/layout/content_main.xml
+++ b/Ejer6_AndroidRelations/Resources/layout/content_main.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -86,7 +86,7 @@
       <Button
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:text="OK"
+        android:text="()"
         android:id="@+id/buttonOK"/>
       
      <EditText
